--- a/styles/carusel.module.scss
+++ b/styles/carusel.module.scss
@@ -18,31 +18,14 @@
         background-color: rgba(0, 0, 0, 0.648);
         h1{
            margin-top: 200px;
-           margin-left: 60px;
+           margin-left: 200px;
            font-size: 50px;
-           color: transparent;
+           color: white;
             position: relative; 
-            &::before{
-                content:attr(data-text);
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 0;
-                border-right: 1px solid rgb(255, 255, 255);
-                height: 100%;
-                -webkit-text-stroke: 1px rgb(255, 255, 255);
-                overflow: hidden;
-                animation: animate 8s linear infinite;
-            }
-            @keyframes animate {
-                0%{
-                    width: 0;
-                }
-                60%{
-                    width:40%;
-                }
-            }
-         
+        }
+        p{
+            margin-left: 200px;
+            font-size: 20px;
         }
     }
     &__btns{
