--- a/styles/fuculy.module.scss
+++ b/styles/fuculy.module.scss
@@ -6,7 +6,8 @@
     justify-content: space-evenly;
     margin-top: 10px;
 
-    div{
+    a{
+        text-decoration: none;
         &:hover{
             background-color: rgb(153, 156, 113);
             transition:2s;
