--- a/styles/carusel.module.scss
+++ b/styles/carusel.module.scss
@@ -3,8 +3,8 @@
     max-width: 1600px;  
     height: 600px;
     box-sizing: border-box;
-    display: flex;   
-    position: relative;
+    // display: flex;   
+    // position: relative;
     &__img{
         margin: 0;
         width: 100%;
@@ -15,7 +15,7 @@
         z-index: 49;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.648);
+        background-color: rgba(0, 0, 0, 0.237);
         h1{
            margin-top: 200px;
            margin-left: 200px;
@@ -31,7 +31,7 @@
     &__btns{
         top:280px;
         width: 100%;
-        display: flex;
+        display:none;
         justify-content: space-between;
         z-index: 100;
         position: absolute;
