--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -4,10 +4,11 @@
     align-items: center;
     justify-content: center;
     padding: 15px 0px;
-    background-color:#5039e4;
+    background-color:#002afffb;
     position: sticky;
     top:0px;
     z-index: 51;
+    border: 2px solid rgba(0, 0, 0, 0.164);
     &__nav{
         width: 90%;
         display: flex;
@@ -18,7 +19,10 @@
             position: relative;
             height: auto;
             &:hover .Navbar__nav__item__menu{
+              scale: 1;
+              transition:all 2s ease-in-out;
                 display: flex;
+                
             }
             &__link{
                 color: rgb(255, 255, 255);
@@ -37,8 +41,12 @@
                   flex-direction: column;
                   width: 180px;
                   border: 2px solid rgb(228, 222, 222);
+                  scale: 0;
                   &:hover{
                     display: flex;
+                    scale: 1;
+                     transition:all 2s ease-in-out;
+                
                   }
                   p{
                     color: rgb(95, 103, 114);
