--- a/styles/topbar.module.scss
+++ b/styles/topbar.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-around;
     padding: 10px 0px;
+    background-color: white;
     &__logo{
         width: 100px;
         height: 100px;
