--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,11 @@
 @tailwind utilities;
 
 .spin{
-  width: 125px;
-  height: 125px;
+  width: 150px;
+  height: 200px;
   justify-content: center;
-  /* @apply animate-pulse */
+  background-color: rgba(255, 255, 255, 0.605);
+  @apply animate-pulse
 }
 .spin:hover .info{
   display: flex;
@@ -14,26 +15,20 @@
 .info{
   padding: 10px;
   border-radius: 10px;
-  background-color:rgba(0, 0, 255, 0.621);
+  background-color:rgba(24, 24, 26, 0.621);
   position: absolute;
   top: -30px;
   color: white;
   display: none;
 }
-.spin::before{
-  content: '';
-  @apply -top-2 w-32 h-32 rounded-full bg-grey flex absolute -z-10
-}
-.spin::after{
-z-index: -1;
-  content: '';
- @apply w-32 h-1  bg-white flex absolute top-14 ;
- @apply animate-spin
-}
 
-.liner{
-  background: rgb(147,51,234);
-  background: linear-gradient(0deg, rgba(147,51,234,1) 24%, rgba(187,139,231,1) 68%);
+
+.box{
+  border-radius: 20px;
+  margin: 100px auto;
+  width: 90%;
+  background: rgb(241,48,179);
+  background: linear-gradient(90deg, rgba(241,48,179,0.7906512946975666) 0%, rgba(69,36,238,0.7122199221485469) 100%);
 }
 
 
