--- a/styles/fuculy.module.scss
+++ b/styles/fuculy.module.scss
@@ -8,6 +8,7 @@
 
     a{
         text-decoration: none;
+        margin: 15px;
         &:hover{
             background-color: rgb(153, 156, 113);
             transition:2s;
