--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -4,8 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 15px 0px;
-    background: rgb(48,78,241);
-    background: linear-gradient(90deg, rgba(48,78,241,1) 0%, rgba(238,36,169,1) 100%);
+    background-color: #1b6b50;
     position: sticky;
     top:0px;
     z-index: 50;
@@ -29,7 +28,7 @@
                 font-size: 20px;
                 font-weight: 400;
                 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                @apply animate-pulse 
+      
 
             }
             &__menu{
