--- a/styles/topbar.module.scss
+++ b/styles/topbar.module.scss
@@ -17,7 +17,7 @@
     &__title{
         max-width: 800px ;
         width: 100%;
-        color: blueviolet;
+        color:#1b6b50;
         font-size: 20px;
         font-weight: 900;
         font-family:'SourceSansPro';
@@ -25,7 +25,7 @@
     &__lang{
         width: 50px;
         height: 40px;
-        color: blue;
+        color:#1b6b50;
         font-size: 25px;
         border: none;
         outline: none;
