--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -6,8 +6,7 @@
     justify-content: space-evenly;
     padding: 20px 0;
     margin-bottom: 0px;
-    background: rgb(48,78,241);
-    background: linear-gradient(90deg, rgba(48,78,241,1) 0%, rgba(238,36,169,1) 100%);
+    background-color: #1b6b50;
     &__nav{
         margin: 0;
         &__item{
