--- a/public/assets/settings.module.scss
+++ b/public/assets/settings.module.scss
@@ -31,4 +31,9 @@
     max-width: 1640px;
     margin-left: auto;
     margin-right: auto;
+    overflow-x: hidden;
 }
+
+.container::-webkit-scrollbar {
+    display: none;
+  }
