--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -17,11 +17,12 @@
             list-style: none;
             position: relative;
             height: auto;
+            transition:all 0.5s ease-in-out;
             &:hover .Navbar__nav__item__menu{
-              scale: 1;
-              transition:all 0.5s ease-in-out;
-                display: flex;
-                
+              top: 30px;
+              transition:  1s ease-out;
+              display: flex;
+              
             }
             &__link{
                 color: rgb(255, 255, 255);
@@ -35,28 +36,30 @@
                   position: absolute;
                   background-color: white;
                   padding: 5px;
-                  border-radius: 10px;
-                  display:flex;
+                  top: 80px;
+                  display:none;
                   flex-direction: column;
-                  width: 180px;
-                  border: 2px solid rgb(228, 222, 222);
-                  scale: 0;
+                  width: 200px;
+                  transition:0.5s ease-in-out;
+                
                   &:hover{
                     display: flex;
-                    scale: 1;
                      transition:all 0.5s ease-in-out;
-                
+                    
                   }
                   p{
-                    color: rgb(95, 103, 114);
+                    color:#1b6b50;
                     font-size: 16px;
+                  
                   }
                   &__links{
                     position: relative;
                     margin-top: 10px;
+                    border-bottom: 2px solid white;
                     &:hover{
-                        color: rgb(5, 113, 255);
-                        text-decoration: underline;
+                        color: #1b6b50;
+                       border-color: #1b6b50;
+                       transition:all 0.5s ease-in-out;
                     }
                     &__category{
                       display: none;
